--- a/meal.html
+++ b/meal.html
@@ -1,1 +1,10 @@
-good eats!!
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Meal Engine</title>
+  </head>
+  <body>
+
+  </body>
+</html>
