added logo and made it clickable for random array

--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset="utf-8">
     <title>Meal Engine</title>
+<!-- bootstrap-->
     <link href=”https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css” rel=”stylesheet”>
+<!-- JS  -->
+    <script type="text/javascript" src="/Users/smcueto/Documents/GitHub-Projects/meal-engine/logoRanGen.js" > </script>
+<!-- jquery -->
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
+
   <body>
-    
+
+    <header>
+          <span name="imageForm">
+              <input type="image" src="https://emojipedia-us.s3.amazonaws.com/thumbs/160/facebook/65/fork-and-knife_1f374.png" name="canvas" onClick="displayImage()" width="100" value="Display Random Image">
+
+          </span>
+    </header>
+
+    <div class="container">
+
+        <h1>What should you eat today?</h1>
+          <div id="test">
+
+          </div>
+
+    </div>
+
+    <footer>
+
+    </footer>
   </body>
 </html>
