--- a/index.html
+++ b/index.html
@@ -3,9 +3,32 @@
   <head>
     <meta charset="utf-8">
     <title>Meal Engine</title>
-    <link href=”https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css” rel=”stylesheet”>
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
   <body>
-    
+    <div>
+      <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">WebSiteName</a>
+          </div>
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Team <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="https://avatars0.githubusercontent.com/u/16566442?s=460&v=4">Ashley</a></li>
+                <li><a href="https://avatars0.githubusercontent.com/u/22802127?s=460&v=4">Stephanie</a></li>
+                <li><a href="https://avatars0.githubusercontent.com/u/16006190?s=460&v=4">Lian</a></li>
+              </ul>
+              </div>
+          </nav>
+      </div>
+      <div class="Video Box">
+        <video poster="https://i.pinimg.com/videos/thumbnails/originals/93/e6/ca/93e6ca69d6979e216da2ee6068d79305-00001.jpg" preload="auto"><source src="https://v.pinimg.com/videos/hls/93/e6/ca/93e6ca69d6979e216da2ee6068d79305.m3u8" type="video/m3u8"><source src="https://v.pinimg.com/videos/720p/93/e6/ca/93e6ca69d6979e216da2ee6068d79305.mp4" type="video/mp4"></video>
+      </div>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </body>
 </html>
