added button to body

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
               <h1>What should you eat today?</h1>
                 <div id="test"> </div>
             </div>
+            <div class="Recipe Button">
+              <div class="btn-" role="group" aria-label="...">
+  <button type="button" class="btn btn-default">Left</button>
+            </div>
+</div>
+          </div>
         </div>
     </div>
   </div>
