--- a/index.html
+++ b/index.html
@@ -72,17 +72,6 @@
               <div class="modal-body">
                   <div class="form-group">
                       <div class="row margin-top-30">
-                          <div class="col-md-3">Category:</div>
-                          <div class="col-md-9">
-                              <select class="selectpicker" data-width="100%">
-                                  <option>- Select -</option>
-                                  <option>Dishes</option>
-                                  <option>Desserts</option>
-                                  <option>Snacks</option>
-                              </select>
-                          </div>
-                      </div>
-                      <div class="row margin-top-30">
                           <div class="col-md-3">Title:</div>
                           <div class="col-md-9">
                               <div class="control-group">
@@ -115,7 +104,7 @@
                           </div>
                       </div>
                       <div class="row margin-top-30">
-                          <div class="col-md-3">Image:</div>
+                          <div class="col-md-3">Link:</div>
                           <div class="col-md-9">
                               <div class="control-group">
                                   <div class="controls">
