--- a/index.html
+++ b/index.html
@@ -51,6 +51,88 @@
     </div>
   </div>
 
+
+
+  <div class="btn-group">
+    <a class="btn btn-red btn-ripple" data-toggle="modal" data-target="#panel-modal2">Add Recipe</a>
+  </div><!--.btn-group-->
+
+
+  <div class="modal modal-nutrition fade full-height from-right" id="panel-modal2" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+          <div class="modal-header">
+              <div class="row">
+                  <div class="col-md-12">
+                      <h4 class="modal-title">I want to add my recipe!</h4>
+                  </div>
+              </div>
+          </div>
+          <div class="modal-body">
+              <div class="form-group">
+                  <div class="row margin-top-30">
+                      <div class="col-md-3">Title:</div>
+                      <div class="col-md-9">
+                          <div class="control-group">
+                              <div class="controls">
+                                  <div class="input-group">
+                                      <div class="inputer">
+                                          <div class="input-wrapper">
+                                              <input type="text" style="width: 200px"  />
+                                          </div>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="row margin-top-30">
+                      <div class="col-md-3">Recipe:</div>
+                      <div class="col-md-9">
+                          <div class="control-group">
+                              <div class="controls">
+                                  <div class="input-group">
+                                      <div class="inputer">
+                                          <div class="input-wrapper">
+                                              <input type="text" style="width: 200px"  />
+                                          </div>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="row margin-top-30">
+                      <div class="col-md-3">Link:</div>
+                      <div class="col-md-9">
+                          <div class="control-group">
+                              <div class="controls">
+                                  <div class="input-group">
+                                      <div class="inputer">
+                                          <div class="input-wrapper">
+                                              <input type="text" style="width: 200px"  />
+                                          </div>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-md-12">
+
+                  </div><!--.col-md-12-->
+              </div><!--.row-->
+          </div>
+          <div class="modal-footer">
+              <button type="button" class="btn btn-flat-secondary" data-dismiss="modal">Nevermind, I don't want to share my recipe.</button>
+              <button type="button" class="btn btn-flat-primary" data-dismiss="modal">Add it, please!</button>
+          </div>
+      </div>
+  </div>
+  </div>
+
                 <!-- jquery  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
